--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="FarmacyApp.App"
+﻿<Application x:Class="PharmacyApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FarmacyApp"
+             xmlns:local="clr-namespace:PharmacyApp"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
